# Rigid-elliptic-disc

./: .gitignore  alform.m  alform2.m  doubleintC.m  hyperterm.m  problemcodeAMDC.py  problemcodeAMDC_opt.py
dataset_generation/: README.md  _bench_k0.py  dataset.csv  generate_dataset.py  problemcodeAMDC_opt.py  pyproject.toml  test_am.py  test_am2.py
dataset_generation/matlab_archive/: alform3.m  intgralv.m  problemcodeAMDC.m
dataset_generation/scripts/: generate.py
dataset_generation/src/: dataset.csv
dataset_generation/src/dataset_generation/: __init__.py  _bench_sweep.py  generate_dataset.py  problemcodeAMDC.py  problemcodeAMDC_opt.py
dataset_generation/src/dataset_generation/matlab_archive/: VARY_DEPTH.m  check.m  getgl.m  kernel.m
dataset_generation/tests/: compare_implementations.py  generate_reference.py  reference_dataset.csv  test_am.py  test_am2.py  test_old.py  test_opt_neg.py
training/: pyproject.toml
training/checkpoints/: phase2_final.pth
training/scripts/: benchmark_AMDC.py  benchmark_phi.py  optimize_am_dc.py  train1_example.py  train2_example.py  visualize.py
training/src/training/: config.py  data.py  model.py  train1.py  train2.py
