[project]
name = "dataset-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sandip Das", email = "sd13535@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "sympy",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
