[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sandip Das", email = "sd13535@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.21.0",
    "matplotlib>=3.11.0",
    "numpy",
    "pandas",
    "scipy>=1.18.0",
    "torch",
    "wandb>=0.28.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
